--- a/style.css
+++ b/style.css
@@ -530,7 +530,8 @@ li{
 .error{
     border: 1px solid red;
     padding: 1rem;
-    color: red;
+   background: red;
+   color:  #fff;
     margin: 1.5rem;
     border-radius: 1rem;
     text-align: center;
@@ -539,7 +540,8 @@ li{
 .connection{
     border: 1px solid blue;
     padding: 1rem;
-    color: blue;
+    background: blue;
+    color:  #fff;
     margin: 1.5rem;
     text-align: center;
     border-radius: 1rem;
@@ -551,4 +553,15 @@ li{
     margin: 1.5rem;
     border-radius: 1rem;
     text-align: center;
+}
+
+.box-wrap{
+    width: 200px;
+    height: 150px;
+text-align: center;
+margin-top: 5rem;
+}
+
+select{
+    padding: 1rem;
 }
