--- a/style.css
+++ b/style.css
@@ -362,14 +362,6 @@ transform: scale(1.05, 1.05);
     box-shadow: 0 3px 5px;
 }
 
-.mcircle{
-    width: 120px;
-    height: 120px;
-    margin: 2rem;
-    border-radius: 50%;
-    box-shadow: 0 3px 5px;
-}
-
 .lcircle{
     width: 135px;
     height: 135px;
@@ -604,3 +596,34 @@ label{
     padding: 1rem;
     margin: 1rem;
 }
+.deco{
+    display: flex;
+    font-size: 30px;
+    background: #ddd;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    padding: .5rem;
+}
+
+span{
+    margin-left: 2rem;
+}
+
+.circle{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    box-shadow: 0 3px 5px;
+    text-align: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-bottom: -1rem;
+    
+}
+
+.circle:hover{
+    transform: scale(1.05, 1.05);
+}
+
